--- a/index.html
+++ b/index.html
@@ -32,25 +32,33 @@
 		</div>
 		
 		<div class="header-one noselect">
-			<div class="owl-carousel-one">
+			<div class="owl-carousel-outer">
 				<div class="item">
 					<video><source src="video/vid1.mp4" type="video/mp4" /></video>
 					<img class="fallback" src="img/vid1.png"/>
 					<h1>trusted by the world's most beloved brands</h1>
-					<img class="center-image logo" src="img/adidas-logo.png"/>
+					<div class="owl-carousel-inner graphic">
+						<div class="item">1<img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item">2<img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item">3<img class="center-image" src="img/adidas-logo.png"/></div>
+					</div>
 					<a href="work.html" class="fade-effect">view our clients</a>
 				</div>
 				<div class="item">
 					<video><source src="video/vid2.mp4" type="video/mp4" /></video>
 					<img class="fallback" src="img/vid2.png"/>
 					<h1>trusted by the world's most beloved brands</h1>
-					<img class="center-image logo" src="img/adidas-logo.png"/>
+					<div class="owl-carousel-inner graphic">
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+					</div>
 					<a href="work.html" class="fade-effect">view our clients</a>
 				</div>
 			</div>
 			<div class="wrapper">
-				<img class="prev" src="img/left-arrow.png" onclick="$('.owl-carousel-one').trigger('owl.prev');"></img>
-				<img class="next" src="img/right-arrow.png" onclick="$('.owl-carousel-one').trigger('owl.next');"></img>
+				<img class="prev" src="img/left-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.prev');"></img>
+				<img class="next" src="img/right-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.next');"></img>
 				<h2 class="loader">loading creativity...</h2>
 			</div>
 		</div>
@@ -128,7 +136,7 @@
 		<div class="section-two">
 			<div class="wrapper">
 				<h1>branding</h1>
-				<div class="owl-carousel-one">
+				<div class="owl-carousel-outer">
 					<div class="item">
 						<img src="img/astancia-logo.jpg"/>
 						<p>Astancia Development Group</p>
@@ -163,42 +171,36 @@
 		<script>
 			$( document ).ready(function() {
 				$('.gallery').finalTilesGallery({ margin: 12, gridCellSize: 12, imageSizeFactor: 1, minTileWidth: 100});
-				$(".header-one .owl-carousel-one").owlCarousel({ slideSpeed : 300, pagination: true, paginationSpeed : 400, autoPlay: false, singleItem : true, /*mouseDrag:false, touchDrag:false,*/ afterMove : animate	});
-				$(".section-two .owl-carousel-one").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300,	rewindNav : false,paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
+				$(".header-one .owl-carousel-outer").owlCarousel({ slideSpeed : 500, pagination: true,  autoPlay: false, singleItem : true, mouseDrag:true, touchDrag:true, afterMove : animate	});
+				$(".header-one .owl-carousel-inner").owlCarousel({ slideSpeed : 300, pagination: false, autoPlay: false, singleItem : true, mouseDrag:true, touchDrag:true,  });
+				$(".section-two .owl-carousel-outer").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300,	rewindNav : false,paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
 				$(window).trigger("resize"); //trigger resize event
 			});
 			
 			//play video after the page has been loaded
 			$(window).load(function() {
-				$(".header-one .owl-carousel-one .item").fadeTo(1000,1);
+				$(".header-one .owl-carousel-outer .item").fadeTo(1000,1);
 				$(".header-one .loader").fadeOut(500, function() {$(this).remove(); });
 				animate();
 			});
-			$( window ).resize(function() { displayGraphic(null,500); });
+			$( window ).resize(function() { $(".graphic").fadeIn(500); });
 			
 			//animate intro videos
 			function animate(){
-				var i = ($(".header-one .owl-carousel-one").data('owlCarousel').currentItem+1);
-				$( ".header-one .owl-carousel-one" ).each(function( index ) {	$( this ).find( ".item:eq("+(i-1)+") .logo" ).fadeOut(0);});
+				var i = ($(".header-one .owl-carousel-outer").data('owlCarousel').currentItem+1);
+				$(".graphic").fadeOut(0);
 				if (!isMobile() && $(window).width() > 640) $('#vid'+i).get(0).play(); //play if not mobile
-				else { displayGraphic($('#vid'+i),0); }
+				else { $(".graphic").fadeIn(500); }
 			}
 			
-			//fade in logo after each video plays completely
+			//fade in graphic after each video plays completely
 			$('.header-one video').each(function(index){ 
 				$(this).attr('id','vid'+(index+1));
-				if (!isMobile()){ $(this).on('ended',function(){ displayGraphic(this,500); }); }
+				if (!isMobile()){ $(this).on('ended',function(){ $(".graphic").fadeIn(500); }); }
 			});
-			function displayGraphic(e,speed){
-				var i = ($(".header-one .owl-carousel-one").data('owlCarousel').currentItem+1);
-				$(".header-one .owl-carousel-one").each(function(index){ $(this).find(".item:eq("+(i-1)+") .logo").fadeIn(speed);});
-			}
 			
 			//resize nav when scrolling downwards
-			$(window).scroll(function(){
-				if ($('body').scrollTop() > 0) { $('.nav').addClass('small'); } 
-				else { $('.nav').removeClass('small'); }
-			});
+			$(window).scroll(function(){ if ($('body').scrollTop() > 0) { $('.nav').addClass('small'); } else { $('.nav').removeClass('small'); }});
 			
 			function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
 		</script>
