--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		<div class="nav fade-effect">
 			<div class="wrapper">
 				<div class="left">
-					<img class="large-logo" src="img/logo-large.png"/>
-					<img class="small-logo" src="img/logo-small.png"/>
+					<a href="index.html">
+						<img class="large-logo fade-effect" src="img/logo-large.png"/>
+						<img class="small-logo fade-effect" src="img/logo-small.png"/>
+					</a>
 				</div>
 				<div class="right">
 					<img class="button fade-effect" src="img/nav-button.png"/>
@@ -38,9 +40,9 @@
 					<img class="fallback" src="img/vid1.png"/>
 					<h1>trusted by the world's most beloved brands</h1>
 					<div class="owl-carousel-inner graphic">
-						<div class="item">1<img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item">2<img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item">3<img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
 					</div>
 					<a href="work.html" class="fade-effect">view our clients</a>
 				</div>
@@ -136,7 +138,7 @@
 		<div class="section-two">
 			<div class="wrapper">
 				<h1>branding</h1>
-				<div class="owl-carousel-outer">
+				<div class="owl-carousel">
 					<div class="item">
 						<img src="img/astancia-logo.jpg"/>
 						<p>Astancia Development Group</p>
@@ -159,7 +161,7 @@
 		<div class="footer">
 			<div class="wrapper">
 				<div class="left"><a href="#"><img class="fade-effect large-logo" src="img/logo-large.png"/></a></div>
-				<div class="right"><a href="#"><img class="fade-effect" src="img/twitter-logo.png"/></a><a href="#"><img class="fade-effect" src="img/facebook-logo.png"/></a><a href="#"><img class="fade-effect" src="img/youtube-logo.png"/></a><a href="#"><img class="fade-effect" src="img/linkedin-logo.png"/></a></div>
+				<div class="right"><a href="https://www.pinterest.com/yanocreative/"><img class="fade-effect" src="img/pinterest-logo.png"/></a><a href="https://twitter.com/yanocreative"><img class="fade-effect" src="img/twitter-logo.png"/></a><a href="https://www.facebook.com/yanocreative"><img class="fade-effect" src="img/facebook-logo.png"/></a></div>
 			</div>
 		</div>
 	
@@ -172,8 +174,8 @@
 			$( document ).ready(function() {
 				$('.gallery').finalTilesGallery({ margin: 12, gridCellSize: 12, imageSizeFactor: 1, minTileWidth: 100});
 				$(".header-one .owl-carousel-outer").owlCarousel({ slideSpeed : 500, pagination: true,  autoPlay: false, singleItem : true, mouseDrag:true, touchDrag:true, afterMove : animate	});
-				$(".header-one .owl-carousel-inner").owlCarousel({ slideSpeed : 300, pagination: false, autoPlay: false, singleItem : true, mouseDrag:true, touchDrag:true,  });
-				$(".section-two .owl-carousel-outer").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300,	rewindNav : false,paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
+				$(".header-one .owl-carousel-inner").owlCarousel({ slideSpeed : 300, pagination: false, autoPlay: true,  singleItem : true, mouseDrag:false, touchDrag:false,  });
+				$(".section-two .owl-carousel").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300, paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
 				$(window).trigger("resize"); //trigger resize event
 			});
 			
