--- a/shc.html
+++ b/shc.html
@@ -35,10 +35,8 @@
 		<div id="skrollr-body">
 			<div class="header-two" style="background-image: url('img/01-header-background.jpg');">
 				<div class="wrapper">
-					<img src="img/01-header-art1.png" style="position: absolute; width: 60%; bottom: 0;"
-						data-center-center="bottom:-10%;" data-top-bottom="bottom:25%;"/>
-					<img src="img/01-header-art2.png" style="position: absolute; width: 70%; left: 35%; bottom: 0;"
-						data-center-center="bottom:-10%;" data-top-bottom="bottom:45%;"/>
+					<img src="img/01-header-art1.png" style="position: absolute; width: 60%; bottom: 0;" data-center-center="bottom:-10%;" data-top-bottom="bottom:25%;"/>
+					<img src="img/01-header-art2.png" style="position: absolute; width: 70%; left: 35%; bottom: 0;"	data-center-center="bottom:-10%;" data-top-bottom="bottom:45%;"/>
 					<div class="headline">
 						<h3>Scottsdale Healthcare</h3>
 						<h5>Health Seminar Campaign Graphics</h5>
@@ -89,7 +87,7 @@
 			<div class="section-four" style="background-image:url('img/01-section-four-background.jpg');">
 				<div class="wrapper">
 					<img class="full" src="img/01-section-four-art1.png"
-							 data-top-center="bottom:0%;" data-top-bottom="bottom:-100%;"/>
+							 data-center-center="bottom:0%;" data-top-bottom="bottom:-100%;"/>
 				</div>
 			</div>
 
@@ -101,7 +99,12 @@
 			</div>
 
 			<div class="section-four" style="background-color: #fff;" >
-				<div class=""></div>
+				<div class="wrapper">
+					<img class="one-fourth" style="top: 5%; left: -5%;" src="img/01-section-four-art1.jpg" data-center-top="top:5%; left: -5%;" data-center-bottom="top:23%; left:75%"/>
+					<img class="one-fourth" style="top: 10%; right: 25%;" src="img/01-section-four-art3.jpg" data-center-top="top:10%; right: 25%;" data-center-bottom="top:23%; right: 45%"/>
+					<img class="one-fourth" style="top: 23%; left: 18%;" src="img/01-section-four-art2.jpg" data-center-top="top:23%; left: 18%;" data-center-bottom="top:10%; left: 45%;"/>
+					<img class="one-fourth" style="top: 23%; right: -5%;" src="img/01-section-four-art4.jpg" data-center-top="top:23%; right: -5%;" data-center-bottom="top:5%; right: 75%;"/>
+				</div>
 			</div>
 
 			<div class="footer">
