finished shc page for now lol

--- a/shc.html
+++ b/shc.html
@@ -86,7 +86,7 @@
 
 			<div class="section-four" style="background-image:url('img/01-section-four-background.jpg');">
 				<div class="wrapper">
-					<img class="full" src="img/01-section-four-art1.png"
+					<img class="fuller" src="img/01-section-four-art1.png"
 							 data-center-center="bottom:0%;" data-top-bottom="bottom:-100%;"/>
 				</div>
 			</div>
@@ -98,12 +98,21 @@
 				</div>
 			</div>
 
-			<div class="section-four" style="background-color: #fff;" >
+			<div class="section-four" style="background-color: #fff; height: 480px" >
 				<div class="wrapper">
 					<img class="one-fourth" style="top: 5%; left: -5%;" src="img/01-section-four-art1.jpg" data-center-top="top:5%; left: -5%;" data-center-bottom="top:23%; left:75%"/>
 					<img class="one-fourth" style="top: 10%; right: 25%;" src="img/01-section-four-art3.jpg" data-center-top="top:10%; right: 25%;" data-center-bottom="top:23%; right: 45%"/>
 					<img class="one-fourth" style="top: 23%; left: 18%;" src="img/01-section-four-art2.jpg" data-center-top="top:23%; left: 18%;" data-center-bottom="top:10%; left: 45%;"/>
 					<img class="one-fourth" style="top: 23%; right: -5%;" src="img/01-section-four-art4.jpg" data-center-top="top:23%; right: -5%;" data-center-bottom="top:5%; right: 75%;"/>
+				</div>
+			</div>
+			
+			<div class="section-three" style="background-color: #f3f4f5;" >
+				<div class="wrapper">
+					<h3 style="margin:48px 0px 24px;">Some Work</h3>
+					<img class="full" src="img/01-section-three-art1.jpg"/>
+					<img class="full" src="img/01-section-three-art2.jpg"/>
+					<img class="full" src="img/01-section-three-art3.jpg"/>
 				</div>
 			</div>
 
