fixed vertical image alignment for mobile section-4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 	</head>
 	<body>
-		<div class="nav fade-effect">
+		<div class="nav fade-effect" ontouchstart="this.classList.toggle('hover');">
 			<div class="wrapper">
 				<div class="left">
 					<a href="index.html">
