started the pain center page

--- a/pc.html
+++ b/pc.html
@@ -33,14 +33,21 @@
 			</div>
 		</div>
 		<div id="skrollr-body">
-			<div class="header-two" style="background-image: url('img/01-header-background.jpg');">
+			<div class="header-two" style="background-image: url('img/02-header-background.jpg');">
 				<div class="wrapper">
-					<img src="img/01-header-art1.png" style="position: absolute; width: 60%; bottom: 0;" data-center-center="bottom:-10%;" data-top-bottom="bottom:25%;"/>
-					<img src="img/01-header-art2.png" style="position: absolute; width: 70%; left: 35%; bottom: 0;"	data-center-center="bottom:-10%;" data-top-bottom="bottom:45%;"/>
-					<div class="headline">
-						<h3>Scottsdale Healthcare</h3>
-						<h5>Health Seminar Campaign Graphics</h5>
-					</div>
+					<span style="font-size: 300px; text-shadow: 0 0 10px rgba(255,255,255,0.5); top: 10%; left: -10%"	data-bottom="font-size: 300px; text-shadow: 0 0 20px rgba(255,255,255,0.5); left:10%;" data-top-bottom="font-size: 150px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: -10%;">Back</span>
+					<span style="font-size: 24px; letter-spacing: 30px; top: 30%; left: 5%; text-shadow: 0 0 0px rgba(255,255,255,0.5);" data-bottom="top: 30%; left: 5%; text-shadow: 0 0 0px rgba(255,255,255,0.5);" data-top="top: 35%; left: -5%; text-shadow: 0 0 3px rgba(255,255,255,0.5);">Shingles</span>
+					<span style="font-size: 24px; top: 35%; left: -3%; text-shadow: 0 0 0px rgba(255,255,255,0.75);" data-bottom="top: 35%; left: -3%; text-shadow: 0 0 0px rgba(255,255,255,0.75);" data-top="top: 40%; left: 8%; text-shadow: 0 0 3px rgba(255,255,255,.25);">Fibromyalgia</span>
+					<span style="font-size: 100px; text-shadow: 0 0 10px rgba(255,255,255,0.5); top: 65%; left: -5%" data-bottom="font-size: 100px; left: -5%; top: 65%;" data-top-bottom="font-size: 120px; left: -20%; top: 70%">headaches</span>
+					<span style="font-size: 72px; text-shadow: 0 0 2px rgba(255,255,255,0.75); top: 75%; left: -2%" 	data-bottom="font-size: 72px; top: 75%; text-shadow: 0 0 2px rgba(255,255,255,0.75);" data-top-bottom="font-size: 60px; top: 80%;text-shadow: 0 0 10px rgba(255,255,255,0.25);">Neck Pain</span>
+					<span style="font-size: 24px; letter-spacing: 30px; top: 30%; right: 5%; text-shadow: 0 0 1px rgba(255,255,255,0.45);" data-bottom="top: 30%; right: 5%;" data-top="top: 35%; right: -5%;" >Back</span>
+					<span style="font-size: 48px; text-shadow: 0 0 3px rgba(255,255,255,0.5); top: 60%; right: -25%" data-bottom="font-size: 48px; top: 30%;" data-top-bottom="font-size: 64px; top: 20%;">Sports Injuries</span>
+					<span style="font-size: 80px; text-shadow: 0 0 6px rgba(255,255,255,0.5); top: 50%; right: -15%" data-bottom="font-size: 80px; top: 50%; right: -15%" data-top-bottom="font-size: 64px; top: 40%; right: -25%">Arthritis</span>
+					<span style="font-size: 80px; text-shadow: 0 0 2px rgba(255,255,255,0.5); top: 65%; right: 15%" 	data-bottom="font-size: 80px; top: 65%; right: 15%" data-top-bottom="font-size: 96px; top: 65%; right: 20%">Cancer</span>
+					<span style="font-size: 24px; letter-spacing: 30px; top: 75%; right: 0%; text-shadow: 0 0 1px rgba(255,255,255,0.75);" data-bottom="top: 75%; right: 0%;" data-top="top: 80%; right: -5%;" >headaches</span>
+					<span style="bottom: 80px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%);">Medication Management  .  Epidural Steroid Injections  .  Nerve Block Techniques  .  Trigger Point Injections  .  Physical Therapy and Rehabilitation  .  Discography  .  Spinal Cord Stimulation</span> 
+					<span style="bottom: 64px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%);">Nucleoplasty  .  Stress Management  .  Joint Injections  .  Radiofrequency  .  IDET  .  Vertebroplasty  .  Spinal Cord Stimulation  .  Intrathecal Pump Therapy  .  Patient and Family Education</span>
+					<div class="center middle"><img src="img/02-header-text.png"/></div>
 				</div>
 			</div>
 
