added a new playpin to pc page

--- a/pc.html
+++ b/pc.html
@@ -53,39 +53,63 @@
 
 			<div class="section-three" style="background-color: #ebebeb;">
 				<div class="wrapper">
+					<div class="center-block">
+						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
+					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p>Scottsdale Healthcare offers many health seminars to the public and was in need of a series if eye-catching campaign graphics which could be used in various mediums such as posters, table tents, advertisements and more.</p>
+						<p>As a new practice the Pain Center of Arizona was unknown to the medical community and needed to establish credibility and build a reputation for quality medical care with positive patient outcomes.</p>
 					</div>
 					<div class="right">
 						<h3>The Solution</h3>
-						<p>A series of colorful hand illustrations were created to poject a feel of personal touch and care while bold headlines added a strong graphical element to command attention in playful way.</p>
+						<p>We created and launched cohesive brand identity which blended strong medical imagery (x-rays) with clean white space and warm sepia-tone lifestyles combined with benefit - oriented outcomes.  Our successful launch helped The Pain Center grow into the largest pain practice in Arizona.</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="section-three">
 				<div class="wrapper">
-					<div class="center-block">
-						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
-					</div>
-					<h3>Campaign Color Palette</h3>
-					<div class="flip-container one-third" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper">
-						<div class="front" style="background-color:#a85c2f;"></div>
-						<div class="back" style="background-color:#c37547;"><span>#a85c2f</span></div>
+					
+					<img class="left-block pad-top-64" src="img/02-header-logo.png"/>
+					<h3>Color Pallete</h3>
+					<div class="left">
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#96adc1;"></div>
+							<div class="back" style="background-color:#afc4d5;"><span>#96adc1</span></div>
+							</div>
+						</div>
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#77787b;"></div>
+							<div class="back" style="background-color:#989aa0;"><span>#77787b</span></div>
+							</div>
 						</div>
 					</div>
-					<div class="flip-container one-third" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper">
-						<div class="front" style="background-color:#355b9c;"></div>
-						<div class="back" style="background-color:#537dc5;"><span>#355b9c</span></div>
+					<div class="right">
+						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#d19d49;"></div>
+							<div class="back" style="background-color:#eab054;"><span>#d19d49</span></div>
+							</div>
 						</div>
-					</div>
-					<div class="flip-container one-third" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper">
-						<div class="front" style="background-color:#dd9203;"></div>
-						<div class="back" style="background-color:#f0ab27;"><span>#dd9203</span></div>
+						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#7396ad;"></div>
+							<div class="back" style="background-color:#90b6cf;"><span>#7396ad</span></div>
+							</div>
+						</div>
+						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#83ac4c;"></div>
+							<div class="back" style="background-color:#9cc566;"><span>#83ac4c</span></div>
+							</div>
+						</div>
+						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+							<div class="front" style="background-color:#716e85;"></div>
+							<div class="back" style="background-color:#8c899f;"><span>#716e85</span></div>
+							</div>
 						</div>
 					</div>
 				</div>
