fixed mobile centering absolute tags

--- a/pc.html
+++ b/pc.html
@@ -45,8 +45,8 @@
 					<span style="font-size: 80px; text-shadow: 0 0 6px rgba(255,255,255,0.5); top: 50%; right: -15%" data-bottom="font-size: 80px; top: 50%; right: -15%" data-top-bottom="font-size: 64px; top: 40%; right: -25%">Arthritis</span>
 					<span style="font-size: 80px; text-shadow: 0 0 2px rgba(255,255,255,0.5); top: 65%; right: 15%" 	data-bottom="font-size: 80px; top: 65%; right: 15%" data-top-bottom="font-size: 96px; top: 65%; right: 20%">Cancer</span>
 					<span style="font-size: 24px; letter-spacing: 30px; top: 75%; right: 0%; text-shadow: 0 0 1px rgba(255,255,255,0.75);" data-bottom="top: 75%; right: 0%;" data-top="top: 80%; right: -5%;" >headaches</span>
-					<span style="bottom: 80px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%);">Medication Management  .  Epidural Steroid Injections  .  Nerve Block Techniques  .  Trigger Point Injections  .  Physical Therapy and Rehabilitation  .  Discography  .  Spinal Cord Stimulation</span> 
-					<span style="bottom: 64px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%);">Nucleoplasty  .  Stress Management  .  Joint Injections  .  Radiofrequency  .  IDET  .  Vertebroplasty  .  Spinal Cord Stimulation  .  Intrathecal Pump Therapy  .  Patient and Family Education</span>
+					<span style="bottom: 80px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%); -ms-transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%);">Medication Management  .  Epidural Steroid Injections  .  Nerve Block Techniques  .  Trigger Point Injections  .  Physical Therapy and Rehabilitation  .  Discography  .  Spinal Cord Stimulation</span> 
+					<span style="bottom: 64px; text-shadow: 0 0 0px rgba(255,255,255,0.5); left: 50%; margin-right: -50%; transform: translate(-50%, -50%); -ms-transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%);">Nucleoplasty  .  Stress Management  .  Joint Injections  .  Radiofrequency  .  IDET  .  Vertebroplasty  .  Spinal Cord Stimulation  .  Intrathecal Pump Therapy  .  Patient and Family Education</span>
 					<div class="center middle"><img src="img/02-header-text.png"/></div>
 				</div>
 			</div>
@@ -70,42 +70,42 @@
 			<div class="section-three">
 				<div class="wrapper">
 					
-					<img class="left-block pad-top-64" src="img/02-header-logo.png"/>
+					<img class="left-block pad-top-64 max-full" src="img/02-header-logo.png"/>
 					<h3>Color Pallete</h3>
-					<div class="left">
-						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
+					<div class="top">
+						<div class="flip-container one-half" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#96adc1;"></div>
 							<div class="back" style="background-color:#afc4d5;"><span>#96adc1</span></div>
 							</div>
 						</div>
-						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
+						<div class="flip-container one-half" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#77787b;"></div>
 							<div class="back" style="background-color:#989aa0;"><span>#77787b</span></div>
 							</div>
 						</div>
 					</div>
-					<div class="right">
-						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+					<div class="bottom">
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#d19d49;"></div>
 							<div class="back" style="background-color:#eab054;"><span>#d19d49</span></div>
 							</div>
 						</div>
-						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#7396ad;"></div>
 							<div class="back" style="background-color:#90b6cf;"><span>#7396ad</span></div>
 							</div>
 						</div>
-						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#83ac4c;"></div>
 							<div class="back" style="background-color:#9cc566;"><span>#83ac4c</span></div>
 							</div>
 						</div>
-						<div class="flip-container one-eighth" ontouchstart="this.classList.toggle('hover');">
+						<div class="flip-container one-forth" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 							<div class="front" style="background-color:#716e85;"></div>
 							<div class="back" style="background-color:#8c899f;"><span>#716e85</span></div>
