finished pain center page

--- a/shc.html
+++ b/shc.html
@@ -46,6 +46,9 @@
 
 			<div class="section-three" style="background-color: #ebebeb;">
 				<div class="wrapper">
+					<div class="center-block">
+						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
+					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
 						<p>Scottsdale Healthcare offers many health seminars to the public and was in need of a series if eye-catching campaign graphics which could be used in various mediums such as posters, table tents, advertisements and more.</p>
@@ -59,9 +62,6 @@
 
 			<div class="section-three">
 				<div class="wrapper">
-					<div class="center-block">
-						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
-					</div>
 					<h3>Campaign Color Palette</h3>
 					<div class="flip-container one-third" ontouchstart="this.classList.toggle('hover');">
 						<div class="flipper">
@@ -100,10 +100,10 @@
 
 			<div class="section-four" style="background-color: #fff; min-height: 480px;"  >
 				<div class="wrapper">
-					<img class="one-fourth" style="top: 5%; left: -5%;" src="img/01-section-four-art1.jpg" data-center-top="top:5%;" data-center-bottom="top:20%;"/>
-					<img class="one-fourth" style="top: 10%; right: 25%;" src="img/01-section-four-art3.jpg" data-center-top="top:10%;" data-center-bottom="top:30%;"/>
-					<img class="one-fourth" style="top: 23%; left: 18%;" src="img/01-section-four-art2.jpg" data-center-top="top:23%;" data-center-bottom="top:40%;"/>
-					<img class="one-fourth" style="top: 23%; right: -5%;" src="img/01-section-four-art4.jpg" data-center-top="top:23%;" data-center-bottom="top:55%;"/>
+					<img class="one-fourth stack" style="top: 5%; left: -5%;" src="img/01-section-four-art1.jpg" data-center-top="top:5%;" data-center-bottom="top:20%;"/>
+					<img class="one-fourth stack" style="top: 10%; right: 25%;" src="img/01-section-four-art3.jpg" data-center-top="top:10%;" data-center-bottom="top:30%;"/>
+					<img class="one-fourth stack" style="top: 23%; left: 18%;" src="img/01-section-four-art2.jpg" data-center-top="top:23%;" data-center-bottom="top:40%;"/>
+					<img class="one-fourth stack" style="top: 23%; right: -5%;" src="img/01-section-four-art4.jpg" data-center-top="top:23%;" data-center-bottom="top:55%;"/>
 				</div>
 			</div>
 			
