--- a/pc.html
+++ b/pc.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 
-			<div class="section-three" style="background-color: #ebebeb;">
+			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper">
 					<div class="center-block">
 						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
@@ -115,35 +115,57 @@
 				</div>
 			</div>
 
-			<div class="section-four shrink" style="background-image:url('img/01-section-four-background.jpg');">
-				<div class="wrapper">
-					<img class="fuller" src="img/01-section-four-art1.png"
-							 data-center-center="bottom:0%;" data-top-bottom="bottom:-100%;"/>
-				</div>
-			</div>
-
-			<div class="section-three" style="background-color: #f3f4f5;" >
-				<div class="wrapper small">
-					<h3>Yano Creative constantly impressed us with both their craftsmanship and creativity. We did better work because we worked with them. </h3>
-					<p class="center">-John Doe</p>
-				</div>
-			</div>
-
-			<div class="section-four" style="background-color: #fff; min-height: 480px;"  >
-				<div class="wrapper">
-					<img class="one-fourth" style="top: 5%; left: -5%;" src="img/01-section-four-art1.jpg" data-center-top="top:5%;" data-center-bottom="top:20%;"/>
-					<img class="one-fourth" style="top: 10%; right: 25%;" src="img/01-section-four-art3.jpg" data-center-top="top:10%;" data-center-bottom="top:30%;"/>
-					<img class="one-fourth" style="top: 23%; left: 18%;" src="img/01-section-four-art2.jpg" data-center-top="top:23%;" data-center-bottom="top:40%;"/>
-					<img class="one-fourth" style="top: 23%; right: -5%;" src="img/01-section-four-art4.jpg" data-center-top="top:23%;" data-center-bottom="top:55%;"/>
+			<div class="section-three" style="background-color: #ebebeb;">
+				<div class="wrapper"><h3>Patient / Referral Brochures</h3>
+					<div class="owl-carousel">
+						<div class="item"><img src="img/02-brochure-small-1.jpg" class="shadow"/></div>
+						<div class="item"><img src="img/02-brochure-small-2.jpg" class="shadow"/></div>
+						<div class="item"><img src="img/02-brochure-small-3.jpg" class="shadow"/></div>
+						<div class="item"><img src="img/02-brochure-small-4.jpg" class="shadow"/></div>
+					</div>
 				</div>
 			</div>
 			
-			<div class="section-three" style="background-color: #f3f4f5;" >
+			<div class="section-four shrink" style="background-color: #fff;">
 				<div class="wrapper">
-					<h3 style="margin:48px 0px 24px;">Some Work</h3>
-					<img class="full" src="img/01-section-three-art1.jpg"/>
-					<img class="full" src="img/01-section-three-art2.jpg"/>
-					<img class="full" src="img/01-section-three-art3.jpg"/>
+					<img class="fuller" src="img/02-sheet1.jpg"
+							 data-bottom-top="filter: blur(10px) grayscale(100%);" data-center-center="filter: blur(0px) grayscale(0%);"/>
+					<img class="abs" src="img/02-sheet2.png" style="bottom: 10%; left:10%; width: 20%;"
+							 data-bottom-top="bottom:10%; left: 10%;" data-top-bottom="bottom:30%; left: 5%"/>
+					<img class="abs"  src="img/02-sheet3.png" style="bottom: 0%; left:20%; width: 60%"
+							 data-bottom-top="bottom:0%; left: 20%;" data-top-bottom="bottom:-20%; left: 25%;"/>
+				</div>
+			</div>
+			
+			<div class="section-four shrink large" style="background-color: #96adc1;">
+				<div class="wrapper padding">
+					<h3 style="color: #fff; text-align: left;">Website & Mobile</h3>
+					<img class="fuller stack eighty-five" src="img/02-window1.jpg" style="top: 10%;"
+							 data-bottom-top="top:10%;" data-top-bottom="top:20%;"/>
+					<img class="fuller stack thirty" src="img/02-window2.png" style="top: 1%; left: initial;"
+							 data-bottom-top="top:10%;" data-top-bottom="top:50%;"/>
+				</div>
+			</div>
+
+			<div class="section-three" style="background-color: #fff;">
+				<div class="wrapper">
+					<h3>Mass Media / Billboards</h3>
+					<img class="fuller" src="img/02-billboard.jpg"/>
+				</div>
+			</div>
+			
+			<div class="section-three" style="background-color: #fff;">
+				<img class="full" src="img/02-athlete.jpg"/>
+				<a href="#" class="abs" style="text-align: center; left:0%; right:0%; top: 30%;">
+					<img class="hover-fade fade-effect" src="img/02-play.png" style="max-width: 15%;"/>
+				</a>
+			</div>
+			
+			<div class="section-three" style="background-color: #fff;">
+				<div class="wrapper">
+					<h3>Additional Work</h3>
+					<img class="full" src="img/02-glasswindow.jpg"/>
+					<img class="full" src="img/02-boxes.jpg"/>
 				</div>
 			</div>
 
@@ -161,10 +183,11 @@
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
 			<script>
 				$(document).ready(function() {
-					if (!isMobile()) $(window).resize(function(){$('.header-two').css("height",$(window).height());});
+					if (!isMobile()) $(window).resize(function(){$('.header-two').css("height",$(window).height());}); //resize top of the page to match the browser
 					else { $('.header-two').css("height",$(window).height()); }
 					var s = skrollr.init( {  } ); //init parallax
 					skrollr.menu.init(s, {animate: true,easing: 'swing', scale: 2,duration: function(currentTop, targetTop) {return 1000;}});
+					$(".section-three .owl-carousel").owlCarousel({items:5,itemsDesktop : [5000,3],itemsDesktopSmall: [640,2],itemsTablet: [480,1],itemsMobile : false,navigation:false,slideSpeed : 300, paginationSpeed : 400,pagination: true,autoPlay: 3000	});
 					$(window).trigger("resize"); //resize window
 					$(window).load(function() {	if (isMobile()) s.destroy(); else s.refresh(); });
 				});
