added new f1 page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="right">
 					<img class="button fade-effect" src="img/nav-button.png"/>
 					<div class="nav-items fade-effect">
-						<a class="fade-effect" href="work.html">work</a>
+						<!--<a class="fade-effect" href="work.html">work</a>-->
 						<a class="fade-effect" href="results.html">results</a>
 						<a class="fade-effect" href="about.html">about</a>
 						<a class="fade-effect" href="contact.html">contact</a>
@@ -140,19 +140,39 @@
 				<h1>branding</h1>
 				<div class="owl-carousel">
 					<div class="item">
-						<img src="img/astancia-logo.jpg"/>
+						<img src="img/03-logo.jpg"/>
+						<p>Natural Reflection</p>
+						<p>Designer and builder of luxury pools and spas</p>
+					</div>
+					<div class="item">
+						<img src="img/04-logo.jpg"/>
 						<p>Astancia Development Group</p>
 						<p>Log and branding solution for a high-end land development group</p>
 					</div>
 					<div class="item">
-						<img src="img/astancia-logo.jpg"/>
-						<p>Astancia Development Group</p>
-						<p>Log and branding solution for a high-end land development group</p>
+						<img src="img/05-logo.jpg"/>
+						<p>Mobistro</p>
+						<p>Developer of mobile phone solutions for the restaurant industry</p>
 					</div>
 					<div class="item">
-						<img src="img/astancia-logo.jpg"/>
-						<p>Astancia Development Group</p>
-						<p>Log and branding solution for a high-end land development group</p>
+						<img src="img/06-logo.jpg"/>
+						<p>Wilson Capital</p>
+						<p>Capitall development group for buildings and real estate</p>
+					</div>
+					<div class="item">
+						<img src="img/07-logo.jpg"/>
+						<p>Urban Pasta is a purveyor of homemade pastas and other delicious sundries.</p>
+						<p>The brand is designed to imply a simple, tasteful plate of pasta</p>
+					</div>
+					<div class="item">
+						<img src="img/08-logo.jpg"/>
+						<p>The Nanny Works brand and logo is inspired by the idea of a protective umbrella</p>
+						<p>and the famous nanny from children's literature who carried one.</p>
+					</div>
+					<div class="item">
+						<img src="img/18-logo.jpg"/>
+						<p>GoNotes</p>
+						<p>Experts at saving you time to do what you do best.</p>
 					</div>
 				</div>
 			</div>
