--- a/shc.html
+++ b/shc.html
@@ -24,7 +24,7 @@
 				<div class="right">
 					<img class="button fade-effect" src="img/nav-button.png"/>
 					<div class="nav-items fade-effect">
-						<a class="fade-effect" href="work.html">work</a>
+						<!--<a class="fade-effect" href="work.html">work</a>-->
 						<a class="fade-effect" href="results.html">results</a>
 						<a class="fade-effect" href="about.html">about</a>
 						<a class="fade-effect" href="contact.html">contact</a>
@@ -110,8 +110,8 @@
 			<div class="section-three" style="background-color: #f3f4f5;" >
 				<div class="wrapper">
 					<h3 style="margin:48px 0px 24px;">Some Work</h3>
-					<img class="full" src="img/01-section-three-art1.jpg"/>
-					<img class="full" src="img/01-section-three-art2.jpg"/>
+					<img class="full pad-bottom-12" src="img/01-section-three-art1.jpg"/>
+					<img class="full pad-bottom-12" src="img/01-section-three-art2.jpg"/>
 					<img class="full" src="img/01-section-three-art3.jpg"/>
 				</div>
 			</div>
