--- a/pc.html
+++ b/pc.html
@@ -24,7 +24,7 @@
 				<div class="right">
 					<img class="button fade-effect" src="img/nav-button.png"/>
 					<div class="nav-items fade-effect">
-						<a class="fade-effect" href="work.html">work</a>
+						<!--<a class="fade-effect" href="work.html">work</a>-->
 						<a class="fade-effect" href="results.html">results</a>
 						<a class="fade-effect" href="about.html">about</a>
 						<a class="fade-effect" href="contact.html">contact</a>
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="section-three">
-				<div class="wrapper">
+				<div class="wrapper" style="border-top: 1px solid #cccccc">
 					
 					<img class="left-block pad-top-64 max-full" src="img/02-header-logo.png"/>
 					<h3>Color Pallete</h3>
@@ -128,8 +128,7 @@
 			
 			<div class="section-four shrink" style="background-color: #fff;">
 				<div class="wrapper">
-					<img class="fuller" src="img/02-sheet1.jpg"
-							 data-bottom-top="filter: blur(10px) grayscale(100%);" data-center-center="filter: blur(0px) grayscale(0%);"/>
+					<img class="fuller" src="img/02-sheet1.jpg"/>
 					<img class="abs" src="img/02-sheet2.png" style="bottom: 10%; left:10%; width: 20%;"
 							 data-bottom-top="bottom:10%; left: 10%;" data-top-bottom="bottom:30%; left: 5%"/>
 					<img class="abs"  src="img/02-sheet3.png" style="bottom: 0%; left:20%; width: 60%"
@@ -141,9 +140,9 @@
 				<div class="wrapper padding">
 					<h3 style="color: #fff; text-align: left;">Website & Mobile</h3>
 					<img class="fuller stack eighty-five" src="img/02-window1.jpg" style="top: 10%;"
-							 data-bottom-top="top:10%;" data-top-bottom="top:20%;"/>
+							 data-bottom-top="top:10%;" data-top-bottom="top:20%; left: -5%"/>
 					<img class="fuller stack thirty" src="img/02-window2.png" style="top: 1%; left: initial;"
-							 data-bottom-top="top:10%;" data-top-bottom="top:50%;"/>
+							 data-bottom-top="top:10%;" data-top-bottom="top:50%; right: -5%;"/>
 				</div>
 			</div>
 
@@ -161,10 +160,17 @@
 				</a>
 			</div>
 			
+			<div class="section-three" style="background-color: #96adc1;" >
+				<div class="wrapper small pad-top-64">
+					<img src="img/02-award.png"/>
+					<p class="center white">A successful brand launch plus over 10 years of consistent branding helped make The Pain Center Arizona’s # 1 pain practice for 3 years running.</p>
+				</div>
+			</div>
+			
 			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper">
 					<h3>Additional Work</h3>
-					<img class="full" src="img/02-glasswindow.jpg"/>
+					<img class="full pad-bottom-12" src="img/02-glasswindow.jpg"/>
 					<img class="full" src="img/02-boxes.jpg"/>
 				</div>
 			</div>
