--- a/shc.html
+++ b/shc.html
@@ -47,7 +47,10 @@
 			<div class="section-three" style="background-color: #ebebeb;">
 				<div class="wrapper">
 					<div class="center-block">
-						<img class="iconz" src="img/print-icon.png"/><img class="iconz" src="img/web-icon.png"/><img class="iconz" src="img/marketing-icon.png"/><img class="iconz" src="img/illustrations-icon.png"/>
+						<a class="iconz"><span class="fadeIn">Print</span><img src="img/print-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Mobile</span><img src="img/mobile-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Marketing</span><img src="img/marketing-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Illustrations</span><img src="img/illustrations-icon.png"/></a>
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
