added skytouch page

--- a/library.html
+++ b/library.html
@@ -94,8 +94,8 @@
 				</div>
 			</div>
 			
-			<div class="header-two" id="bg2" style="background-image: url('img/11-header2.jpg'); background-position: center center; background-attachment: fixed;"></div>
-			<div class="header-two" id="bg3" style="background-image: url('img/11-header3.jpg'); background-position: center center; background-attachment: fixed;"></div>
+			<div class="header-two" id="bg2" style="background-image: url('img/11-header2.jpg'); background-position: top center; background-attachment: fixed;"></div>
+			<div class="header-two" id="bg3" style="background-image: url('img/11-header3.jpg'); background-position: top center; background-attachment: fixed;"></div>
 			<div class="header-two" id="bg4" style="background-image: url('img/11-header4.jpg'); background-position: center center; background-attachment: fixed;"></div>
 			
             <div class="section-three" style="background-color: #b46c36;" >
