updated minor content

--- a/kyle.html
+++ b/kyle.html
@@ -37,7 +37,7 @@
                 <div class="wrapper" style="max-width: initial;" data-center-center="background-color: rgba(229,171,5,0);" data-top-bottom="background-color: rgba(229,171,5,1);"></div>
             </div>
 
-			<div class="section-three" style="background-color: #f3ebd9;">
+			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper">
 					<div class="center-block">
 						<a class="iconz"><span class="fadeIn">Web</span><img src="img/web-icon.png"/></a>
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 
-			<div class="section-three" style="background-color: #f3ebd9;">
+			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper" style="border-top: 1px solid #cccccc;">
                     <img class="left-block max-full center pad-top-32" src="img/0902-logo.png"/>
 					<h3>Color Pallete</h3>
@@ -81,7 +81,7 @@
 				</div>
 			</div>
             
-            <div class="section-three" style="background-color: #e8b045;" >
+            <div class="section-three" style="background-color: #e09e03;" >
 				<div class="wrapper small pad-top-64">
 					<div class="top"><img src="img/0902-award1.png"/></div>
                     <div class="bottom"><img src="img/0902-award2.png"/></div>
@@ -108,7 +108,7 @@
             
 			<div class="section-four shrink" style="background-color: #e5e6e6;">
 				<div class="wrapper padding-more">
-                    <h3 style="text-align: left;">Web Game</h3>
+                    <h3 style="text-align: left;">Entry Form</h3>
                     <img src="img/0902-topbar.jpg" class="full"/>
                     <div class="fake-window">
                         <img src="img/0902-web.jpg" class="full"/>
